prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/syntax_errors/invalid_type_name_suggestion.nut
// EXPECT_ERROR: "did you mean"
local x: Int = 5
